Changelog:

2008-09-17
 - Version 0.5.2
 - Updated to support all 1.1 sub-versions. It doesn't look like there will be
   major changes in the affected areas.

2008-05-20:
 - Version 0.5.1
 - Fixed to work on SMF 1.1.5

2008-02-10:
 - Version 0.5
 - Added support for SMF 2.0 Beta 2 and 2.0 Beta 2.1
 - Minor language change in English for better wording (matches 2.0 wording style)
 - Added readme specific to SMF 2.0
 - Added British English selections and UTF-8 editions of all languages

2007-10-13:
 - Version 0.3.2
 - Updated XML files to install on SMF 1.1.4
 - Minor XML updates

2007-07-02:
 - Version 0.3.1
 - Updated XML files to install on SMF 1.1.3

2007-05-10:
 - Version 0.3
 - Fixed Issue #12 - Multi-page search results not working with VVO on
 - Fixed Issue #13 - Re-search for empty search requires code

2007-03-30:
 - Version 0.2
 - Fixed mod to be valid XHTML
 - Broke out theme changes into different files
 - Added classic theme support

2007-03-26:
 - Added German, Turkish, and Japanese translations

2007-03-17:
 - Version 0.1
 - Initial Release