@@ -1,5 +1,8 @@
 Changelog:
 
+2009-07-11
+ - Added Arabic translation
+
 2008-09-17
  - Version 0.5.2
  - Updated to support all 1.1 sub-versions. It doesn't look like there will be
